--- a/src/pages/create-project/create-project.scss
+++ b/src/pages/create-project/create-project.scss
@@ -128,7 +128,11 @@ page-create-project {
         textarea {
             width: 90%;
             padding-right: 0px;
-            border-width: 2px;
+            border-width: 1px;
         }
+    }
+
+    .label {
+        text-align: left;
     }
 }
